--- a/style.css
+++ b/style.css
@@ -327,7 +327,7 @@ footer {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    align-items: center;
+    align-content: center; /* Dikeyde de ortalamak için */
     gap: 5px;
     padding: 5px;
     box-sizing: border-box;
